--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,5 +20,11 @@
         <a href="/orders">Orders</a>
       </li>
     </ul>
+    <% form_tag search_path, :method => "get" do %>
+      <div class="search">
+        <%= text_field_tag :search, params[:q] %>
+        <%= submit_tag "Search" %>
+      </div>
+    <% end %>
   </div>
 </nav>
